--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,23 +52,36 @@ body {
   }
   
   
-  .navbar {
-    background-color: rgb(55, 55, 103) !important;
+  .navbar-brand {
+    background-color: rgb(55, 55, 103) ;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     z-index: 1000;
   }
   
   .navbar-brand {
     font-weight: bold;
+
+  }
+  .navbar-nav {
+    gap: 20px; 
+    display: flex; 
+    align-items: center;
   }
   
   .nav-link {
     font-weight: 500;
     transition: color 0.3s;
+    font-size: 18px;
+  
+  color: white !important;
+  padding: 8px 12px;
+ 
+    
   }
   
   .nav-link:hover {
     color: #28a745 !important;
+    
   }
   
   
@@ -108,7 +121,7 @@ body {
     font-weight: bold;
   }
   
-  button {
+  .navbar-toggler {
     background-color: #ffffff22;
     color: white;
     border: 1px solid white;
@@ -146,7 +159,116 @@ textarea {
 }
 
   
+.vertical-navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 220px;
+    height: 100%;
+    background: linear-gradient(180deg, #be1e6b, #e74c3c); 
+    padding: 20px;
+    box-shadow: 2px 0 12px rgba(0, 0, 0, 0.2);
+    color: white;
+    z-index: 1000;
+  }
+  
+  .vertical-navbar .logo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 40px;
+    color: white;
+    text-align: center;
+  }
+  
+  .vertical-navbar ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .vertical-navbar ul li {
+    margin: 20px 0;
+  }
+  
+  .vertical-navbar ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    display: block;
+    padding: 10px 15px;
+    border-radius: 8px;
+    transition: background 0.3s;
+  }
+  
+  .vertical-navbar ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  
+  .bar-link {
+    font-weight: 500;
+    transition: color 0.3s;
+  }
+  
+  .bar-link:hover {
+    color: #28a745 !important;
+  }
 
+  
+  
+  .text-box-1 {
+    max-width: 600px;
+    color: #333;
+    font-size: 30px;
+    font-weight: bold;
+    text-align:unset ;
+    line-height: 1.6;
+    position: absolute;
+  
+  right: 20px;
+
+  
+  }
+
+
+
+  .projects-section {
+    padding: 60px 20px;
+   
+    text-align: center;
+  }
+  
+  .cards-container {
+    display: flex ;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 30px;
+  }
+  
+  .project-card {
+   
+    display: grid;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: transform 0.3s;
+  }
+  .project-card:hover {
+    transform: translateY(-8px);
+  }
+
+  .project-card img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 15px;
+  }
+
+  .project-card a {
+    text-decoration: none;
+   
+    padding: 8px 16px;
+    border-radius: 6px;
+    display: inline-block;
+  }
   
 
 
